SGFD-16779 layout issue in restaurant page - icon space

--- a/src/Volo/FrontendBundle/Resources/public/css/pages/menu.scss
+++ b/src/Volo/FrontendBundle/Resources/public/css/pages/menu.scss
@@ -98,9 +98,9 @@
   left: 0px;
   @include appear-from("screen-md");
 
-  i.icon-call-phone {
+  i {
     display: inline-block;
-    margin-left: 22px;
+    margin-left: $space-md;
   }
 }
 
